--- a/frontend/package.json
+++ b/frontend/package.json
@@ -52,5 +52,6 @@
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.1",
     "prettier": "^3.0.3"
-  }
+  },
+  "proxy": "http://localhost:3000"
 }
