--- a/backend/package.json
+++ b/backend/package.json
@@ -6,6 +6,8 @@
   "main": "server.js",
   "types": "server.d.ts",
   "scripts": {
+    "build": "./build-common.sh && tsc",
+    "testServer": "npm run build && node dist/feature/example/ENTRY-testServer.js",
     "test": "jest",
     "pretty": "prettier --write .",
     "pretty-check": "prettier --check .",
@@ -16,10 +18,13 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
+    "forzen-network": "^0.1.0",
     "mysql": "^2.18.1"
   },
   "devDependencies": {
+    "@types/express": "^4.17.18",
     "@types/jest": "^29.5.5",
+    "@types/mysql": "^2.15.22",
     "@types/node": "^20.8.6",
     "@typescript-eslint/eslint-plugin": "^6.7.5",
     "@typescript-eslint/parser": "^6.7.5",
@@ -30,8 +35,6 @@
     "prettier": "^3.0.3",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
-    "typescript": "^5.2.2",
-    "@types/express": "^4.17.18",
-    "@types/mysql": "^2.15.22"
+    "typescript": "^5.2.2"
   }
 }
